add cleanup of memorization models

--- a/nlp/clean_hydra_dirs.ipynb
+++ b/nlp/clean_hydra_dirs.ipynb
@@ -162,6 +162,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Memorizing Models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_date_dir = True\n",
+    "is_multirun_dir = True\n",
+    "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/memorizing\")\n",
+    "datasets_target_dir = Path(\"/root/similaritybench/experiments/datasets/nlp/memorizing\")\n",
+    "\n",
+    "\n",
+    "def memorizing_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    strength = str(float(cfg.memorization_rate)).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}_labels{cfg.memorization_n_new_labels}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "def memorizing_dataset_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    strength = str(float(cfg.memorization_rate)).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_labels{cfg.memorization_n_new_labels}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-03-25\")\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-03-26\")\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
