store configs of clean models

--- a/nlp/clean_hydra_dirs.ipynb
+++ b/nlp/clean_hydra_dirs.ipynb
@@ -204,11 +204,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Standard Models\n",
+    "\n",
+    "Models are already copied over, just need to add the hydra configs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "path = Path(\"/root/similaritybench/experiments/models/nlp/standard\")\n",
+    "for model_path in path.iterdir():\n",
+    "    with (model_path / \"path.txt\").open() as f:\n",
+    "        original_hydra_path = f.readline()\n",
+    "\n",
+    "    config_path = Path(original_hydra_path) / \".hydra\" / \"config.yaml\"\n",
+    "    print(config_path, model_path / config_path.name)\n",
+    "    shutil.copy2(str(config_path), str(model_path / config_path.name))\n"
+   ]
   }
  ],
  "metadata": {
