move new models to experiment dir

--- a/nlp/clean_hydra_dirs.ipynb
+++ b/nlp/clean_hydra_dirs.ipynb
@@ -124,6 +124,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "New shortcut rates that take base rate of classes into account"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path(\"/root/similaritybench/multirun/2024-04-02\")\n",
+    "is_date_dir = True\n",
+    "is_multirun_dir = True\n",
+    "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/shortcut\")\n",
+    "\n",
+    "\n",
+    "def shortcut_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    shortcut_rate = str(cfg.shortcut_rate).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}_scrate{shortcut_rate}\"\n",
+    "\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, shortcut_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Augmented models\n",
     "\n",
     "(copied over from Viserion)"
