update short validation

--- a/nlp/shortcut_validation.ipynb
+++ b/nlp/shortcut_validation.ipynb
@@ -23,7 +23,15 @@
     "from omegaconf import OmegaConf\n",
     "from repsim.nlp import get_dataset, get_model\n",
     "from bert_finetune import ShortcutAdder\n",
-    "import os\n",
+    "import os\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
     "\n",
@@ -102,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df"
+    "df = pd.read_csv(\"shortcut_evals.csv\")"
    ]
   },
   {
@@ -120,6 +128,7 @@
     "    s = s.split(\"_\")[1].replace(\"pre\", \"\")\n",
     "    return int(s)\n",
     "\n",
+    "split=\"validation\"\n",
     "clean_df = df.copy()\n",
     "clean_df[\"split\"] = split\n",
     "clean_df[\"model_sc_rate\"] = clean_df[\"model\"].map(scrate)\n",
@@ -212,7 +221,9 @@
     "        )\n",
     "\n",
     "pvals = pd.DataFrame.from_records(records, columns=cols)\n",
-    "pvals.head()"
+    "pvals.head()\n",
+    "\n",
+    "pvals[pvals.ds_rate == 0]"
    ]
   },
   {
@@ -224,7 +235,7 @@
     "significant = pvals[pvals.pval < 0.05]\n",
     "print(len(significant)/len(pvals))\n",
     "\n",
-    "significant.sort_values(by=[\"rate1\", \"rate2\", \"ds_rate\"])"
+    "significant.sort_values(by=[\"rate1\", \"rate2\", \"ds_rate\"])[significant.ds_rate == 0]"
    ]
   },
   {
