--- a/nlp/clean_hydra_dirs.ipynb
+++ b/nlp/clean_hydra_dirs.ipynb
@@ -124,6 +124,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "New shortcut rates that take base rate of classes into account"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path(\"/root/similaritybench/multirun/2024-04-02\")\n",
+    "is_date_dir = True\n",
+    "is_multirun_dir = True\n",
+    "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/shortcut\")\n",
+    "\n",
+    "\n",
+    "def shortcut_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    shortcut_rate = str(cfg.shortcut_rate).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}_scrate{shortcut_rate}\"\n",
+    "\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, shortcut_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Augmented models\n",
     "\n",
     "(copied over from Viserion)"
@@ -162,11 +190,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Memorizing Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "is_date_dir = True\n",
+    "is_multirun_dir = True\n",
+    "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/memorizing\")\n",
+    "datasets_target_dir = Path(\"/root/similaritybench/experiments/datasets/nlp/memorizing\")\n",
+    "\n",
+    "\n",
+    "def memorizing_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    strength = str(float(cfg.memorization_rate)).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}_labels{cfg.memorization_n_new_labels}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "def memorizing_dataset_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    strength = str(float(cfg.memorization_rate)).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_labels{cfg.memorization_n_new_labels}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-03-25\")\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-03-26\")\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Standard Models\n",
+    "\n",
+    "Models are already copied over, just need to add the hydra configs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path(\"/root/similaritybench/experiments/models/nlp/standard\")\n",
+    "for model_path in path.iterdir():\n",
+    "    with (model_path / \"path.txt\").open() as f:\n",
+    "        original_hydra_path = f.readline()\n",
+    "\n",
+    "    config_path = Path(original_hydra_path) / \".hydra\" / \"config.yaml\"\n",
+    "    print(config_path, model_path / config_path.name)\n",
+    "    shutil.copy2(str(config_path), str(model_path / config_path.name))\n"
+   ]
   }
  ],
  "metadata": {
