--- a/nlp/clean_hydra_dirs.ipynb
+++ b/nlp/clean_hydra_dirs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,21 @@
     "from typing import Callable\n",
     "import warnings\n",
     "\n",
+    "def _get_timestamp_dirs(path: Path, is_date_dir: bool, is_multirun_dir: bool):\n",
+    "    if is_date_dir:\n",
+    "        timestamp_dirs = path.iterdir()\n",
+    "    elif (not is_date_dir) and is_multirun_dir:\n",
+    "        timestamp_dirs = [path]\n",
+    "    else:\n",
+    "        raise NotImplementedError()\n",
+    "    return timestamp_dirs\n",
     "\n",
     "def datasets_to_storage(\n",
     "    path: Path, is_date_dir: bool, is_multirun_dir: bool, target_dir: Path, subdir_id_creator: Callable\n",
     "):\n",
-    "    if not is_date_dir or not is_multirun_dir:\n",
-    "        raise NotImplementedError()\n",
+    "    timestamp_dirs = _get_timestamp_dirs(path, is_date_dir, is_multirun_dir)\n",
     "\n",
-    "    for timestamp_dir in path.iterdir():\n",
+    "    for timestamp_dir in timestamp_dirs:\n",
     "        if not timestamp_dir.is_dir():\n",
     "            continue\n",
     "\n",
@@ -46,10 +53,9 @@
     "def experiment_results_to_storage(\n",
     "    path: Path, is_date_dir: bool, is_multirun_dir: bool, target_dir: Path, subdir_id_creator: Callable\n",
     "):\n",
-    "    if not is_date_dir or not is_multirun_dir:\n",
-    "        raise NotImplementedError()\n",
+    "    timestamp_dirs = _get_timestamp_dirs(path, is_date_dir, is_multirun_dir)\n",
     "\n",
-    "    for timestamp_dir in path.iterdir():\n",
+    "    for timestamp_dir in timestamp_dirs:\n",
     "        if not timestamp_dir.is_dir():\n",
     "            continue\n",
     "\n",
@@ -71,10 +77,9 @@
     "\n",
     "\n",
     "def delete_unused_checkpoints(path: Path, is_date_dir: bool, is_multirun_dir: bool):\n",
-    "    if not is_date_dir or not is_multirun_dir:\n",
-    "        raise NotImplementedError()\n",
+    "    timestamp_dirs = _get_timestamp_dirs(path, is_date_dir, is_multirun_dir)\n",
     "\n",
-    "    for timestamp_dir in path.iterdir():\n",
+    "    for timestamp_dir in timestamp_dirs:\n",
     "        if not timestamp_dir.is_dir():\n",
     "            continue\n",
     "\n",
@@ -193,6 +198,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Some) MNLI models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength10/model.safetensors\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength10/training_args.bin\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength10/config.json\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength10/config.yaml\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength05/model.safetensors\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength05/training_args.bin\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength05/config.json\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength05/config.yaml\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength025/model.safetensors\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength025/training_args.bin\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength025/config.json\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength025/config.yaml\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength075/model.safetensors\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength075/training_args.bin\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength075/config.json\n",
+      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength075/config.yaml\n",
+      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/3/checkpoint-61000\n",
+      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/3/checkpoint-12000\n",
+      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/1/checkpoint-61000\n",
+      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/1/checkpoint-12000\n",
+      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/0/checkpoint-61000\n",
+      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/0/checkpoint-12000\n",
+      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/2/checkpoint-61000\n",
+      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/2/checkpoint-12000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-04-03/11-19-13\")\n",
+    "is_date_dir = False\n",
+    "is_multirun_dir = True\n",
+    "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/augmentation\")\n",
+    "datasets_target_dir = Path(\"/root/similaritybench/experiments/datasets/nlp/robustness\")\n",
+    "\n",
+    "\n",
+    "def augmentation_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    augmentation_id = \"eda\"\n",
+    "    strength = Path(cfg.dataset.local_path).name.replace(\"mnli_eda_strength\", \"\")\n",
+    "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}_{augmentation_id}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "def augmentation_dataset_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    augmentation_id = \"eda\"\n",
+    "    strength = Path(cfg.dataset.local_path).name.replace(\"mnli_eda_strength\", \"\")\n",
+    "    return f\"{dataset_id}_{augmentation_id}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, augmentation_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Memorizing Models"
    ]
   },
@@ -229,6 +304,80 @@
     "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
     "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
     "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With updated memorization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength025/train\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength025/.hydra\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength025/validation\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength025/test\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength075/train\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength075/.hydra\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength075/validation\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength075/test\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength10/train\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength10/.hydra\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength10/validation\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength10/test\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength05/train\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength05/.hydra\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength05/validation\n",
+      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength05/test\n"
+     ]
+    }
+   ],
+   "source": [
+    "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/memorizing\")\n",
+    "datasets_target_dir = Path(\"/root/similaritybench/experiments/datasets/nlp/memorizing\")\n",
+    "\n",
+    "\n",
+    "def memorizing_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    strength = str(float(cfg.memorization_rate)).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}_labels{cfg.memorization_n_new_labels}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "def memorizing_dataset_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    strength = str(float(cfg.memorization_rate)).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_labels{cfg.memorization_n_new_labels}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-04-03/17-09-20\")\n",
+    "is_date_dir = False\n",
+    "is_multirun_dir = True\n",
+    "# experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "# delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-04-03/21-29-25\")\n",
+    "is_date_dir = False\n",
+    "is_multirun_dir = True\n",
+    "# experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "# delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "# datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-04-04\")\n",
+    "is_date_dir = True\n",
+    "is_multirun_dir = True\n",
+    "# experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "# delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "# datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)"
    ]
   },
   {
