--- a/nlp/clean_hydra_dirs.ipynb
+++ b/nlp/clean_hydra_dirs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +157,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "MNLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_date_dir = False\n",
+    "is_multirun_dir = True\n",
+    "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/shortcut\")\n",
+    "\n",
+    "\n",
+    "def shortcut_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    shortcut_rate = str(cfg.shortcut_rate).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}_scrate{shortcut_rate}\"\n",
+    "\n",
+    "\n",
+    "for multirun_dirname in [\"11-07-38\", \"11-07-39\", \"11-07-41\", \"11-07-42\", \"11-15-18\"]:\n",
+    "    path = Path(\"/root\") / multirun_dirname\n",
+    "    experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, shortcut_subdir_id)\n",
+    "    delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Augmented models\n",
     "\n",
     "(copied over from Viserion)"
@@ -203,40 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength10/model.safetensors\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength10/training_args.bin\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength10/config.json\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength10/config.yaml\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength05/model.safetensors\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength05/training_args.bin\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength05/config.json\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength05/config.yaml\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength025/model.safetensors\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength025/training_args.bin\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength025/config.json\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength025/config.yaml\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength075/model.safetensors\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength075/training_args.bin\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength075/config.json\n",
-      "/root/similaritybench/experiments/models/nlp/augmentation/glue__mnli_pre0_ft0_eda_strength075/config.yaml\n",
-      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/3/checkpoint-61000\n",
-      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/3/checkpoint-12000\n",
-      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/1/checkpoint-61000\n",
-      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/1/checkpoint-12000\n",
-      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/0/checkpoint-61000\n",
-      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/0/checkpoint-12000\n",
-      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/2/checkpoint-61000\n",
-      "Deleting /root/similaritybench/multirun/2024-04-03/11-19-13/2/checkpoint-12000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "path = Path(\"/root/similaritybench/multirun/2024-04-03/11-19-13\")\n",
@@ -315,32 +314,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength025/train\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength025/.hydra\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength025/validation\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength025/test\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength075/train\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength075/.hydra\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength075/validation\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength075/test\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength10/train\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength10/.hydra\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength10/validation\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength10/test\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength05/train\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength05/.hydra\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength05/validation\n",
-      "/root/similaritybench/experiments/datasets/nlp/memorizing/sst2_labels5_strength05/test\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/memorizing\")\n",
     "datasets_target_dir = Path(\"/root/similaritybench/experiments/datasets/nlp/memorizing\")\n",
@@ -378,6 +354,43 @@
     "# experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
     "# delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
     "# datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MNLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/memorizing\")\n",
+    "datasets_target_dir = Path(\"/root/similaritybench/experiments/datasets/nlp/memorizing\")\n",
+    "\n",
+    "\n",
+    "def memorizing_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    strength = str(float(cfg.memorization_rate)).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}_labels{cfg.memorization_n_new_labels}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "def memorizing_dataset_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    strength = str(float(cfg.memorization_rate)).replace(\".\", \"\")\n",
+    "    return f\"{dataset_id}_labels{cfg.memorization_n_new_labels}_strength{strength}\"\n",
+    "\n",
+    "\n",
+    "path = Path(\"/root/11-16-46\")\n",
+    "is_date_dir = False\n",
+    "is_multirun_dir = True\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)"
    ]
   },
   {
