Improve structure of cleanup notebook and copy more mnli models

--- a/nlp/clean_hydra_dirs.ipynb
+++ b/nlp/clean_hydra_dirs.ipynb
@@ -101,7 +101,9 @@
     "## Shortcut models\n",
     "\n",
     "- copy best model to `experiments` directory\n",
-    "- delete unused checkpoints"
+    "- delete unused checkpoints\n",
+    "\n",
+    "### SST2"
    ]
   },
   {
@@ -157,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MNLI"
+    "### MNLI"
    ]
   },
   {
@@ -189,6 +191,7 @@
    "source": [
     "## Augmented models\n",
     "\n",
+    "### SST2\n",
     "(copied over from Viserion)"
    ]
   },
@@ -228,6 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### MNLI\n",
     "(Some) MNLI models"
    ]
   },
@@ -267,7 +271,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Memorizing Models"
+    "## Memorizing Models\n",
+    "\n",
+    "### SST2"
    ]
   },
   {
@@ -360,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MNLI"
+    "### MNLI"
    ]
   },
   {
@@ -385,7 +391,35 @@
     "    return f\"{dataset_id}_labels{cfg.memorization_n_new_labels}_strength{strength}\"\n",
     "\n",
     "\n",
-    "path = Path(\"/root/11-16-46\")\n",
+    "# path = Path(\"/root/11-16-46\")\n",
+    "# is_date_dir = False\n",
+    "# is_multirun_dir = True\n",
+    "# experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "# delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "# datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-04-22/15-02-33\")\n",
+    "is_date_dir = False\n",
+    "is_multirun_dir = True\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-04-22/15-02-34\")\n",
+    "is_date_dir = False\n",
+    "is_multirun_dir = True\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-04-22/15-02-35\")\n",
+    "is_date_dir = False\n",
+    "is_multirun_dir = True\n",
+    "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
+    "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "datasets_to_storage(path, is_date_dir, is_multirun_dir, datasets_target_dir, memorizing_dataset_subdir_id)\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-04-22/15-02-36\")\n",
     "is_date_dir = False\n",
     "is_multirun_dir = True\n",
     "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, memorizing_subdir_id)\n",
@@ -399,6 +433,7 @@
    "source": [
     "## Standard Models\n",
     "\n",
+    "### SST2\n",
     "Models are already copied over, just need to add the hydra configs."
    ]
   },
@@ -417,6 +452,40 @@
     "    print(config_path, model_path / config_path.name)\n",
     "    shutil.copy2(str(config_path), str(model_path / config_path.name))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MNLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_dir = Path(\"/root/similaritybench/experiments/models/nlp/standard\")\n",
+    "\n",
+    "def standard_subdir_id(cfg):\n",
+    "    dataset_id = cfg.dataset.path if not cfg.dataset.name else f\"{cfg.dataset.path}__{cfg.dataset.name}\"\n",
+    "    return f\"{dataset_id}_pre{cfg.model.seed}_ft{cfg.dataset.finetuning.trainer.args.seed}\"\n",
+    "\n",
+    "for time in [\"15-02-18\", \"15-02-19\", \"15-02-20\", \"15-02-21\", \"15-02-22\"]:\n",
+    "    path = Path(f\"/root/similaritybench/multirun/2024-04-22/{time}\")\n",
+    "    is_date_dir = False\n",
+    "    is_multirun_dir = True\n",
+    "    experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, standard_subdir_id)\n",
+    "    delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -435,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
