MNLI Augmentation configs

--- a/nlp/clean_hydra_dirs.ipynb
+++ b/nlp/clean_hydra_dirs.ipynb
@@ -263,6 +263,11 @@
     "    return f\"{dataset_id}_{augmentation_id}_strength{strength}\"\n",
     "\n",
     "\n",
+    "# experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, augmentation_subdir_id)\n",
+    "# delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)\n",
+    "\n",
+    "path = Path(\"/root/similaritybench/multirun/2024-04-26\")\n",
+    "is_date_dir = True\n",
     "experiment_results_to_storage(path, is_date_dir, is_multirun_dir, target_dir, augmentation_subdir_id)\n",
     "delete_unused_checkpoints(path, is_date_dir, is_multirun_dir)"
    ]
