initial exploration of results

--- a/graphs/notebooks/explore_train_results.ipynb
+++ b/graphs/notebooks/explore_train_results.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +827,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Architecture</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GAT</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GCN</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GraphSAGE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Setting</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Normal</th>\n",
+       "      <td>0.763473</td>\n",
+       "      <td>0.717977</td>\n",
+       "      <td>0.701808</td>\n",
+       "      <td>0.787741</td>\n",
+       "      <td>0.714051</td>\n",
+       "      <td>0.697550</td>\n",
+       "      <td>0.852344</td>\n",
+       "      <td>0.723279</td>\n",
+       "      <td>0.715388</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Augmentation_25</th>\n",
+       "      <td>0.744494</td>\n",
+       "      <td>0.721199</td>\n",
+       "      <td>0.712775</td>\n",
+       "      <td>0.773271</td>\n",
+       "      <td>0.731233</td>\n",
+       "      <td>0.718310</td>\n",
+       "      <td>0.815254</td>\n",
+       "      <td>0.720729</td>\n",
+       "      <td>0.707343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Augmentation_50</th>\n",
+       "      <td>0.730804</td>\n",
+       "      <td>0.713782</td>\n",
+       "      <td>0.698105</td>\n",
+       "      <td>0.754137</td>\n",
+       "      <td>0.723783</td>\n",
+       "      <td>0.716046</td>\n",
+       "      <td>0.804038</td>\n",
+       "      <td>0.728884</td>\n",
+       "      <td>0.721684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Augmentation_75</th>\n",
+       "      <td>0.718015</td>\n",
+       "      <td>0.712977</td>\n",
+       "      <td>0.701479</td>\n",
+       "      <td>0.739886</td>\n",
+       "      <td>0.714152</td>\n",
+       "      <td>0.692550</td>\n",
+       "      <td>0.786444</td>\n",
+       "      <td>0.723380</td>\n",
+       "      <td>0.713680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Augmentation_100</th>\n",
+       "      <td>0.693758</td>\n",
+       "      <td>0.691768</td>\n",
+       "      <td>0.680472</td>\n",
+       "      <td>0.716344</td>\n",
+       "      <td>0.695460</td>\n",
+       "      <td>0.671481</td>\n",
+       "      <td>0.758635</td>\n",
+       "      <td>0.709588</td>\n",
+       "      <td>0.701644</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Architecture           GAT                           GCN                      \\\n",
+       "                     Train       Val      Test     Train       Val      Test   \n",
+       "Setting                                                                        \n",
+       "Normal            0.763473  0.717977  0.701808  0.787741  0.714051  0.697550   \n",
+       "Augmentation_25   0.744494  0.721199  0.712775  0.773271  0.731233  0.718310   \n",
+       "Augmentation_50   0.730804  0.713782  0.698105  0.754137  0.723783  0.716046   \n",
+       "Augmentation_75   0.718015  0.712977  0.701479  0.739886  0.714152  0.692550   \n",
+       "Augmentation_100  0.693758  0.691768  0.680472  0.716344  0.695460  0.671481   \n",
+       "\n",
+       "Architecture     GraphSAGE                      \n",
+       "                     Train       Val      Test  \n",
+       "Setting                                         \n",
+       "Normal            0.852344  0.723279  0.715388  \n",
+       "Augmentation_25   0.815254  0.720729  0.707343  \n",
+       "Augmentation_50   0.804038  0.728884  0.721684  \n",
+       "Augmentation_75   0.786444  0.723380  0.713680  \n",
+       "Augmentation_100  0.758635  0.709588  0.701644  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_data_table(\"augmentation_test\", \"ogbn-arxiv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +1122,7 @@
        "RandomLabels_100  0.004632  1.00  0.136  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1275,7 @@
        "RandomLabels_100  0.622790  0.982723  0.152877  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1133,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1193,15 +1346,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Normal</th>\n",
-       "      <td>0.847814</td>\n",
-       "      <td>0.765804</td>\n",
-       "      <td>0.722138</td>\n",
-       "      <td>0.708196</td>\n",
-       "      <td>0.788654</td>\n",
-       "      <td>0.717440</td>\n",
-       "      <td>0.585659</td>\n",
-       "      <td>0.853004</td>\n",
-       "      <td>0.716500</td>\n",
+       "      <td>0.763473</td>\n",
+       "      <td>0.717977</td>\n",
+       "      <td>0.701808</td>\n",
+       "      <td>0.787741</td>\n",
+       "      <td>0.714051</td>\n",
+       "      <td>0.697550</td>\n",
+       "      <td>0.852344</td>\n",
+       "      <td>0.723279</td>\n",
+       "      <td>0.715388</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomLabels_25</th>\n",
@@ -1259,7 +1412,7 @@
        "Architecture           GAT                           GCN                      \\\n",
        "                     Train       Val      Test     Train       Val      Test   \n",
        "Setting                                                                        \n",
-       "Normal            0.847814  0.765804  0.722138  0.708196  0.788654  0.717440   \n",
+       "Normal            0.763473  0.717977  0.701808  0.787741  0.714051  0.697550   \n",
        "RandomLabels_25   2.015594  0.571161  0.539045  1.882507  0.586941  0.523642   \n",
        "RandomLabels_50   2.798009  0.382622  0.359140  2.669756  0.395300  0.348468   \n",
        "RandomLabels_75   3.338989  0.201295  0.177959  3.214353  0.220824  0.168395   \n",
@@ -1268,14 +1421,14 @@
        "Architecture     GraphSAGE                      \n",
        "                     Train       Val      Test  \n",
        "Setting                                         \n",
-       "Normal            0.585659  0.853004  0.716500  \n",
+       "Normal            0.852344  0.723279  0.715388  \n",
        "RandomLabels_25   1.723860  0.629177  0.534984  \n",
        "RandomLabels_50   2.512188  0.436668  0.349072  \n",
        "RandomLabels_75   3.071998  0.284404  0.168026  \n",
        "RandomLabels_100  3.275284  0.279093  0.025672  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
