--- a/graphs/notebooks/explore_experimental_train_results.ipynb
+++ b/graphs/notebooks/explore_experimental_train_results.ipynb
@@ -275,6 +275,274 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Architecture</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GCN</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GraphSAGE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Setting</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_0</th>\n",
+       "      <td>0.992857</td>\n",
+       "      <td>0.686</td>\n",
+       "      <td>0.702</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.608</td>\n",
+       "      <td>0.636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_25</th>\n",
+       "      <td>0.892857</td>\n",
+       "      <td>0.518</td>\n",
+       "      <td>0.553</td>\n",
+       "      <td>0.985714</td>\n",
+       "      <td>0.540</td>\n",
+       "      <td>0.580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_50</th>\n",
+       "      <td>0.878571</td>\n",
+       "      <td>0.652</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.694</td>\n",
+       "      <td>0.691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_75</th>\n",
+       "      <td>0.964286</td>\n",
+       "      <td>0.602</td>\n",
+       "      <td>0.601</td>\n",
+       "      <td>0.950000</td>\n",
+       "      <td>0.590</td>\n",
+       "      <td>0.591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_100</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.694</td>\n",
+       "      <td>0.671</td>\n",
+       "      <td>0.957143</td>\n",
+       "      <td>0.702</td>\n",
+       "      <td>0.595</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Architecture       GCN               GraphSAGE              \n",
+       "                 Train    Val   Test     Train    Val   Test\n",
+       "Setting                                                     \n",
+       "Shortcut_0    0.992857  0.686  0.702  1.000000  0.608  0.636\n",
+       "Shortcut_25   0.892857  0.518  0.553  0.985714  0.540  0.580\n",
+       "Shortcut_50   0.878571  0.652  0.672  1.000000  0.694  0.691\n",
+       "Shortcut_75   0.964286  0.602  0.601  0.950000  0.590  0.591\n",
+       "Shortcut_100  1.000000  0.694  0.671  0.957143  0.702  0.595"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_data_table(\"shortcut_test\", \"cora\", [\"GCN\", \"GraphSAGE\"], code=\"4feats\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Architecture</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GAT</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GCN</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">GraphSAGE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "      <th>Train</th>\n",
+       "      <th>Val</th>\n",
+       "      <th>Test</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Setting</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.742</td>\n",
+       "      <td>0.771</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.696</td>\n",
+       "      <td>0.718</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.746</td>\n",
+       "      <td>0.749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_25</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.748</td>\n",
+       "      <td>0.767</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.716</td>\n",
+       "      <td>0.720</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.746</td>\n",
+       "      <td>0.731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_50</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.772</td>\n",
+       "      <td>0.778</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.728</td>\n",
+       "      <td>0.735</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.758</td>\n",
+       "      <td>0.742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_75</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.822</td>\n",
+       "      <td>0.783</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.798</td>\n",
+       "      <td>0.748</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.828</td>\n",
+       "      <td>0.737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shortcut_100</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.884</td>\n",
+       "      <td>0.779</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.860</td>\n",
+       "      <td>0.753</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.902</td>\n",
+       "      <td>0.651</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Architecture   GAT                 GCN               GraphSAGE              \n",
+       "             Train    Val   Test Train    Val   Test     Train    Val   Test\n",
+       "Setting                                                                     \n",
+       "Shortcut_0     1.0  0.742  0.771   1.0  0.696  0.718       1.0  0.746  0.749\n",
+       "Shortcut_25    1.0  0.748  0.767   1.0  0.716  0.720       1.0  0.746  0.731\n",
+       "Shortcut_50    1.0  0.772  0.778   1.0  0.728  0.735       1.0  0.758  0.742\n",
+       "Shortcut_75    1.0  0.822  0.783   1.0  0.798  0.748       1.0  0.828  0.737\n",
+       "Shortcut_100   1.0  0.884  0.779   1.0  0.860  0.753       1.0  0.902  0.651"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_data_table(\"shortcut_test\", \"cora\", code=\"1-hot\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
